--- a/.github/workflows/执行 spotlessCheck.yml
+++ b/.github/workflows/执行 spotlessCheck.yml
@@ -1,15 +1,21 @@
-name: 执行 spotlessCheck
+name: Auto Format Code
 
 on:
   pull_request:
-    branches: [ 1.20.1 ]  
+    branches: [ main, master ]
+  push:
+    branches: [ main, master ]
 
 jobs:
-  check-code-style:
+  auto-format:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 需要写入权限以提交更改
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}  # 针对 PR 的源分支
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -17,6 +23,13 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Validate code style
-        run: ./gradlew spotlessCheck
-#      - run: git commit -am "Auto-format code"  # 提交修复后的代码
+      - name: Auto-format code
+        run: ./gradlew spotlessApply
+
+      - name: Commit changes
+        if: github.event_name == 'pull_request' || github.event_name == 'push'
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git diff --quiet || (git add . && git commit -m "style: auto-format code via GitHub Actions")
+          git push
